Secretária/Compiladores/004/udf_parser.output
Terminais não usados na gramática

    tPRIVATE
    tTDIMS
    tIFX


Estado 85 conflitos: 3 troca/redução
Estado 86 conflitos: 3 troca/redução
Estado 88 conflitos: 1 troca/redução
Estado 90 conflitos: 3 troca/redução
Estado 120 conflitos: 1 troca/redução
Estado 130 conflitos: 3 troca/redução
Estado 133 conflitos: 16 troca/redução
Estado 134 conflitos: 3 troca/redução
Estado 135 conflitos: 3 troca/redução
Estado 136 conflitos: 3 troca/redução
Estado 137 conflitos: 3 troca/redução
Estado 138 conflitos: 3 troca/redução
Estado 139 conflitos: 3 troca/redução
Estado 140 conflitos: 3 troca/redução
Estado 141 conflitos: 3 troca/redução
Estado 142 conflitos: 3 troca/redução
Estado 143 conflitos: 3 troca/redução
Estado 144 conflitos: 3 troca/redução
Estado 145 conflitos: 3 troca/redução
Estado 146 conflitos: 3 troca/redução
Estado 152 conflitos: 1 troca/redução
Estado 162 conflitos: 1 troca/redução
Estado 171 conflitos: 1 troca/redução
Estado 234 conflitos: 2 troca/redução
Estado 236 conflitos: 2 redução/redução


Gramática

    0 $accept: file $end

    1 file: ε
    2     | declarations

    3 declarations: declaration
    4             | declarations declaration

    5 declaration: vardec ';'
    6            | fundec
    7            | fundef

    8 vardec: tFORWARD data_type tID
    9       | tPUBLIC data_type tID opt_initializer
   10       | data_type tID opt_initializer
   11       | tPUBLIC tAUTO_TYPE tID '=' expr
   12       | tAUTO_TYPE tID '=' expr

   13 vardecs: vardec ';'
   14        | vardecs vardec ';'

   15 opt_vardecs: ε
   16            | vardecs

   17 data_type: tSTRING_TYPE
   18          | tINT_TYPE
   19          | tREAL_TYPE
   20          | tVOID_TYPE
   21          | tTENSOR_TYPE '<' tensor_dims '>'
   22          | tPTR_TYPE '<' data_type '>'
   23          | tPTR_TYPE '<' tAUTO_TYPE '>'

   24 tensor_dims: tINTEGER
   25            | tensor_dims ',' tINTEGER

   26 opt_initializer: ε
   27                | '=' expr

   28 fundec: data_type tID '(' argdecs ')'
   29       | tFORWARD data_type tID '(' argdecs ')'
   30       | tPUBLIC data_type tID '(' argdecs ')'
   31       | tAUTO_TYPE tID '(' argdecs ')'
   32       | tFORWARD tAUTO_TYPE tID '(' argdecs ')'
   33       | tPUBLIC tAUTO_TYPE tID '(' argdecs ')'

   34 fundef: data_type tID '(' argdecs ')' block
   35       | tPUBLIC data_type tID '(' argdecs ')' block
   36       | tAUTO_TYPE tID '(' argdecs ')' block
   37       | tPUBLIC tAUTO_TYPE tID '(' argdecs ')' block

   38 argdecs: ε
   39        | argdec
   40        | argdecs ',' argdec

   41 argdec: data_type tID

   42 block: '{' opt_vardecs opt_stmts '}'

   43 fordec: data_type tID '=' expr

   44 fordecs: fordec
   45        | fordecs ',' fordec

   46 opt_forinit: ε
   47            | fordecs
   48            | tAUTO_TYPE tID '=' exprs
   49            | exprs

   50 return: tRETURN ';'
   51       | tRETURN expr ';'

   52 stmts: stmt
   53      | stmts stmt

   54 opt_stmts: ε
   55          | stmts

   56 stmt: tIF '(' expr ')' stmt
   57     | tIF '(' expr ')' stmt iffalse
   58     | tFOR '(' opt_forinit ';' opt_exprs ';' opt_exprs ')' stmt
   59     | expr ';'
   60     | tPRINT exprs ';'
   61     | tPRINTLN exprs ';'
   62     | tBREAK
   63     | tCONTINUE
   64     | return
   65     | block

   66 iffalse: tELSE stmt
   67        | tELIF '(' expr ')' stmt iffalse

   68 lvalue: tID
   69       | lvalue '[' expr ']'
   70       | '(' expr ')' '[' expr ']'
   71       | tID '(' opt_exprs ')' '[' expr ']'
   72       | expr tTINDEX '(' exprs ')'

   73 expr: integer
   74     | real
   75     | string
   76     | tNULLPTR
   77     | tTENSOR_TYPE '<' exprs '>'
   78     | tensor_literal
   79     | expr '.' tTCAPACITY
   80     | expr '.' tTRANK
   81     | expr '.' tTDIM '(' expr ')'
   82     | expr '.' tTRESHAPE '(' exprs ')'
   83     | expr tTCONTRACTION expr
   84     | lvalue
   85     | lvalue '=' expr
   86     | expr '+' expr
   87     | expr '-' expr
   88     | expr '*' expr
   89     | expr '/' expr
   90     | expr '%' expr
   91     | expr '<' expr
   92     | expr tLE expr
   93     | expr tEQ expr
   94     | expr tGE expr
   95     | expr '>' expr
   96     | expr tNE expr
   97     | expr tAND expr
   98     | expr tOR expr
   99     | '-' expr
  100     | '+' expr
  101     | '~' expr
  102     | tINPUT
  103     | tOBJECTS '(' expr ')'
  104     | tID '(' opt_exprs ')'
  105     | tSIZEOF '(' exprs ')'
  106     | '(' expr ')'
  107     | '[' expr ']'
  108     | lvalue '?'

  109 exprs: expr
  110      | exprs ',' expr

  111 opt_exprs: ε
  112          | exprs

  113 tensor_literal: '[' exprs ']'

  114 integer: tINTEGER

  115 real: tREAL

  116 string: tSTRING
  117       | string tSTRING


Terminais, com regras onde aparecem

    $end (0) 0
    '%' (37) 90
    '(' (40) 28 29 30 31 32 33 34 35 36 37 56 57 58 67 70 71 72 81 82 103 104 105 106
    ')' (41) 28 29 30 31 32 33 34 35 36 37 56 57 58 67 70 71 72 81 82 103 104 105 106
    '*' (42) 88
    '+' (43) 86 100
    ',' (44) 25 40 45 110
    '-' (45) 87 99
    '.' (46) 79 80 81 82
    '/' (47) 89
    ';' (59) 5 13 14 50 51 58 59 60 61
    '<' (60) 21 22 23 77 91
    '=' (61) 11 12 27 43 48 85
    '>' (62) 21 22 23 77 95
    '?' (63) 108
    '[' (91) 69 70 71 107 113
    ']' (93) 69 70 71 107 113
    '{' (123) 42
    '}' (125) 42
    '~' (126) 101
    error (256)
    tPUBLIC (258) 9 11 30 33 35 37
    tPRIVATE (259)
    tFORWARD (260) 8 29 32
    tAUTO_TYPE (261) 11 12 23 31 32 33 36 37 48
    tSTRING_TYPE (262) 17
    tINT_TYPE (263) 18
    tREAL_TYPE (264) 19
    tPTR_TYPE (265) 22 23
    tTENSOR_TYPE (266) 21 77
    tVOID_TYPE (267) 20
    tIF (268) 56 57
    tELIF (269) 67
    tELSE (270) 66
    tFOR (271) 58
    tBREAK (272) 62
    tCONTINUE (273) 63
    tRETURN (274) 50 51
    tOBJECTS (275) 103
    tTCAPACITY (276) 79
    tTRANK (277) 80
    tTDIMS (278)
    tTDIM (279) 81
    tTINDEX (280) 72
    tTRESHAPE (281) 82
    tTCONTRACTION (282) 83
    tPRINT (283) 60
    tPRINTLN (284) 61
    tINPUT (285) 102
    tSIZEOF (286) 105
    tUMINUS (287)
    tIFX (288)
    tINTEGER <i> (289) 24 25 114
    tREAL <d> (290) 115
    tSTRING <s> (291) 116 117
    tID <s> (292) 8 9 10 11 12 28 29 30 31 32 33 34 35 36 37 41 43 48 68 71 104
    tNULLPTR <expression> (293) 76
    tOR (294) 98
    tAND (295) 97
    tEQ (296) 93
    tNE (297) 96
    tGE (298) 94
    tLE (299) 92
    tUNARY (300)


Não terminais, com regras onde aparecem

    $accept (65)
        à esquerda: 0
    file <sequence> (66)
        à esquerda: 1 2
        à direita: 0
    declarations <sequence> (67)
        à esquerda: 3 4
        à direita: 2 4
    declaration <node> (68)
        à esquerda: 5 6 7
        à direita: 3 4
    vardec <node> (69)
        à esquerda: 8 9 10 11 12
        à direita: 5 13 14
    vardecs <sequence> (70)
        à esquerda: 13 14
        à direita: 14 16
    opt_vardecs <sequence> (71)
        à esquerda: 15 16
        à direita: 42
    data_type <type> (72)
        à esquerda: 17 18 19 20 21 22 23
        à direita: 8 9 10 22 28 29 30 34 35 41 43
    tensor_dims <dims> (73)
        à esquerda: 24 25
        à direita: 21 25
    opt_initializer <expression> (74)
        à esquerda: 26 27
        à direita: 9 10
    fundec <node> (75)
        à esquerda: 28 29 30 31 32 33
        à direita: 6
    fundef <node> (76)
        à esquerda: 34 35 36 37
        à direita: 7
    argdecs <sequence> (77)
        à esquerda: 38 39 40
        à direita: 28 29 30 31 32 33 34 35 36 37 40
    argdec <node> (78)
        à esquerda: 41
        à direita: 39 40
    block <block> (79)
        à esquerda: 42
        à direita: 34 35 36 37 65
    fordec <node> (80)
        à esquerda: 43
        à direita: 44 45
    fordecs <sequence> (81)
        à esquerda: 44 45
        à direita: 45 47
    opt_forinit <node> (82)
        à esquerda: 46 47 48 49
        à direita: 58
    return <node> (83)
        à esquerda: 50 51
        à direita: 64
    stmts <sequence> (84)
        à esquerda: 52 53
        à direita: 53 55
    opt_stmts <sequence> (85)
        à esquerda: 54 55
        à direita: 42
    stmt <node> (86)
        à esquerda: 56 57 58 59 60 61 62 63 64 65
        à direita: 52 53 56 57 58 66 67
    iffalse <node> (87)
        à esquerda: 66 67
        à direita: 57 67
    lvalue <lvalue> (88)
        à esquerda: 68 69 70 71 72
        à direita: 69 84 85 108
    expr <expression> (89)
        à esquerda: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
        à direita: 11 12 27 43 51 56 57 59 67 69 70 71 72 79 80 81 82 83 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 103 106 107 109 110
    exprs <sequence> (90)
        à esquerda: 109 110
        à direita: 48 49 60 61 72 77 82 105 110 112 113
    opt_exprs <sequence> (91)
        à esquerda: 111 112
        à direita: 58 71 104
    tensor_literal <expression> (92)
        à esquerda: 113
        à direita: 78
    integer <expression> (93)
        à esquerda: 114
        à direita: 73
    real <expression> (94)
        à esquerda: 115
        à direita: 74
    string <s> (95)
        à esquerda: 116 117
        à direita: 75 117


Estado 0

    0 $accept: • file $end

    tPUBLIC       troca e vai para estado 1
    tFORWARD      troca e vai para estado 2
    tAUTO_TYPE    troca e vai para estado 3
    tSTRING_TYPE  troca e vai para estado 4
    tINT_TYPE     troca e vai para estado 5
    tREAL_TYPE    troca e vai para estado 6
    tPTR_TYPE     troca e vai para estado 7
    tTENSOR_TYPE  troca e vai para estado 8
    tVOID_TYPE    troca e vai para estado 9

    $default  redução com regra 1 (file)

    file          vai para estado 10
    declarations  vai para estado 11
    declaration   vai para estado 12
    vardec        vai para estado 13
    data_type     vai para estado 14
    fundec        vai para estado 15
    fundef        vai para estado 16


Estado 1

    9 vardec: tPUBLIC • data_type tID opt_initializer
   11       | tPUBLIC • tAUTO_TYPE tID '=' expr
   30 fundec: tPUBLIC • data_type tID '(' argdecs ')'
   33       | tPUBLIC • tAUTO_TYPE tID '(' argdecs ')'
   35 fundef: tPUBLIC • data_type tID '(' argdecs ')' block
   37       | tPUBLIC • tAUTO_TYPE tID '(' argdecs ')' block

    tAUTO_TYPE    troca e vai para estado 17
    tSTRING_TYPE  troca e vai para estado 4
    tINT_TYPE     troca e vai para estado 5
    tREAL_TYPE    troca e vai para estado 6
    tPTR_TYPE     troca e vai para estado 7
    tTENSOR_TYPE  troca e vai para estado 8
    tVOID_TYPE    troca e vai para estado 9

    data_type  vai para estado 18


Estado 2

    8 vardec: tFORWARD • data_type tID
   29 fundec: tFORWARD • data_type tID '(' argdecs ')'
   32       | tFORWARD • tAUTO_TYPE tID '(' argdecs ')'

    tAUTO_TYPE    troca e vai para estado 19
    tSTRING_TYPE  troca e vai para estado 4
    tINT_TYPE     troca e vai para estado 5
    tREAL_TYPE    troca e vai para estado 6
    tPTR_TYPE     troca e vai para estado 7
    tTENSOR_TYPE  troca e vai para estado 8
    tVOID_TYPE    troca e vai para estado 9

    data_type  vai para estado 20


Estado 3

   12 vardec: tAUTO_TYPE • tID '=' expr
   31 fundec: tAUTO_TYPE • tID '(' argdecs ')'
   36 fundef: tAUTO_TYPE • tID '(' argdecs ')' block

    tID  troca e vai para estado 21


Estado 4

   17 data_type: tSTRING_TYPE •

    $default  redução com regra 17 (data_type)


Estado 5

   18 data_type: tINT_TYPE •

    $default  redução com regra 18 (data_type)


Estado 6

   19 data_type: tREAL_TYPE •

    $default  redução com regra 19 (data_type)


Estado 7

   22 data_type: tPTR_TYPE • '<' data_type '>'
   23          | tPTR_TYPE • '<' tAUTO_TYPE '>'

    '<'  troca e vai para estado 22


Estado 8

   21 data_type: tTENSOR_TYPE • '<' tensor_dims '>'

    '<'  troca e vai para estado 23


Estado 9

   20 data_type: tVOID_TYPE •

    $default  redução com regra 20 (data_type)


Estado 10

    0 $accept: file • $end

    $end  troca e vai para estado 24


Estado 11

    2 file: declarations •
    4 declarations: declarations • declaration

    tPUBLIC       troca e vai para estado 1
    tFORWARD      troca e vai para estado 2
    tAUTO_TYPE    troca e vai para estado 3
    tSTRING_TYPE  troca e vai para estado 4
    tINT_TYPE     troca e vai para estado 5
    tREAL_TYPE    troca e vai para estado 6
    tPTR_TYPE     troca e vai para estado 7
    tTENSOR_TYPE  troca e vai para estado 8
    tVOID_TYPE    troca e vai para estado 9

    $default  redução com regra 2 (file)

    declaration  vai para estado 25
    vardec       vai para estado 13
    data_type    vai para estado 14
    fundec       vai para estado 15
    fundef       vai para estado 16


Estado 12

    3 declarations: declaration •

    $default  redução com regra 3 (declarations)


Estado 13

    5 declaration: vardec • ';'

    ';'  troca e vai para estado 26


Estado 14

   10 vardec: data_type • tID opt_initializer
   28 fundec: data_type • tID '(' argdecs ')'
   34 fundef: data_type • tID '(' argdecs ')' block

    tID  troca e vai para estado 27


Estado 15

    6 declaration: fundec •

    $default  redução com regra 6 (declaration)


Estado 16

    7 declaration: fundef •

    $default  redução com regra 7 (declaration)


Estado 17

   11 vardec: tPUBLIC tAUTO_TYPE • tID '=' expr
   33 fundec: tPUBLIC tAUTO_TYPE • tID '(' argdecs ')'
   37 fundef: tPUBLIC tAUTO_TYPE • tID '(' argdecs ')' block

    tID  troca e vai para estado 28


Estado 18

    9 vardec: tPUBLIC data_type • tID opt_initializer
   30 fundec: tPUBLIC data_type • tID '(' argdecs ')'
   35 fundef: tPUBLIC data_type • tID '(' argdecs ')' block

    tID  troca e vai para estado 29


Estado 19

   32 fundec: tFORWARD tAUTO_TYPE • tID '(' argdecs ')'

    tID  troca e vai para estado 30


Estado 20

    8 vardec: tFORWARD data_type • tID
   29 fundec: tFORWARD data_type • tID '(' argdecs ')'

    tID  troca e vai para estado 31


Estado 21

   12 vardec: tAUTO_TYPE tID • '=' expr
   31 fundec: tAUTO_TYPE tID • '(' argdecs ')'
   36 fundef: tAUTO_TYPE tID • '(' argdecs ')' block

    '='  troca e vai para estado 32
    '('  troca e vai para estado 33


Estado 22

   22 data_type: tPTR_TYPE '<' • data_type '>'
   23          | tPTR_TYPE '<' • tAUTO_TYPE '>'

    tAUTO_TYPE    troca e vai para estado 34
    tSTRING_TYPE  troca e vai para estado 4
    tINT_TYPE     troca e vai para estado 5
    tREAL_TYPE    troca e vai para estado 6
    tPTR_TYPE     troca e vai para estado 7
    tTENSOR_TYPE  troca e vai para estado 8
    tVOID_TYPE    troca e vai para estado 9

    data_type  vai para estado 35


Estado 23

   21 data_type: tTENSOR_TYPE '<' • tensor_dims '>'

    tINTEGER  troca e vai para estado 36

    tensor_dims  vai para estado 37


Estado 24

    0 $accept: file $end •

    $default  aceitar


Estado 25

    4 declarations: declarations declaration •

    $default  redução com regra 4 (declarations)


Estado 26

    5 declaration: vardec ';' •

    $default  redução com regra 5 (declaration)


Estado 27

   10 vardec: data_type tID • opt_initializer
   28 fundec: data_type tID • '(' argdecs ')'
   34 fundef: data_type tID • '(' argdecs ')' block

    '='  troca e vai para estado 38
    '('  troca e vai para estado 39

    $default  redução com regra 26 (opt_initializer)

    opt_initializer  vai para estado 40


Estado 28

   11 vardec: tPUBLIC tAUTO_TYPE tID • '=' expr
   33 fundec: tPUBLIC tAUTO_TYPE tID • '(' argdecs ')'
   37 fundef: tPUBLIC tAUTO_TYPE tID • '(' argdecs ')' block

    '='  troca e vai para estado 41
    '('  troca e vai para estado 42


Estado 29

    9 vardec: tPUBLIC data_type tID • opt_initializer
   30 fundec: tPUBLIC data_type tID • '(' argdecs ')'
   35 fundef: tPUBLIC data_type tID • '(' argdecs ')' block

    '='  troca e vai para estado 38
    '('  troca e vai para estado 43

    $default  redução com regra 26 (opt_initializer)

    opt_initializer  vai para estado 44


Estado 30

   32 fundec: tFORWARD tAUTO_TYPE tID • '(' argdecs ')'

    '('  troca e vai para estado 45


Estado 31

    8 vardec: tFORWARD data_type tID •
   29 fundec: tFORWARD data_type tID • '(' argdecs ')'

    '('  troca e vai para estado 46

    $default  redução com regra 8 (vardec)


Estado 32

   12 vardec: tAUTO_TYPE tID '=' • expr
